UI-Fix - [x] Show % in doughnut chart legends - [x] Change color in total worker graphs - [x] Handle dughnut graphs width,height,responsiveness - [x] Handle alignment  of title in other section preview - [x] Handle alignment of file name in add/edit questionnaire
Resolve issues
- [x] CH1-I331 - Dashboard  start date:  able to select future date
- [x] CH1-I330 - Titles for Dashboard:  correction required in Dashboard titles

Work on download functionality add company SAQ table into pdf

--- a/src/index.css
+++ b/src/index.css
@@ -2796,3 +2796,27 @@ input::-ms-reveal {
 /* td .Toastify {
   display: none;
 } */
+
+/* other document section */
+.flex-between-other-section {
+  display: flex;
+  justify-content: space-between;
+  /* align-items: center; */
+  flex-wrap: wrap;
+}
+.flex-between-other-section-left {
+  flex: 0 0 30%;
+    max-width: 50%;
+}
+.flex-mid-other-section {
+  width: 40%;
+}
+.flex-end-other-section {
+  width: 27%;
+}
+.flex-between-other-section-right {
+    flex: 0 0 69%;
+}
+.flex-between-other-section-right .form-group{
+  flex: 0 0 49%;
+}
